Bug 411433 - Samba status info is blank
Summary: Samba status info is blank
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: Samba (other bugs)
Version First Reported In: 5.14.5
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-29 23:29 UTC by davehill
Modified: 2020-02-08 17:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description davehill 2019-08-29 23:29:04 UTC
SUMMARY
Kinfocenter Help says the Samba page front-ends smbstatus, but smbstatus only works as root (or equiv.). Also, the log file doesn't exist and the folder that has the correct log (/var/log/samba/) is not viewable by non-root user. 

STEPS TO REPRODUCE
1. Set up smb shares on the machine. Connect to them from Windows machines.
2. Open Kinfocenter, expand Network Information, click on Samba Status.
3. 

OBSERVED RESULT
No info appears on Exports tab. (I'm not importing so haven't tested that tab). Log tab is blank and pointing to /var/log/samba.log. Log file should maybe be /var/log/samba/log.smb or some other file in that folder, although floder is locked to non-root. Statistics tab is blank.

EXPECTED RESULT
Exports, Log and Statistics listed. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.5.4.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-09-04 00:03:10 UTC
The incorrect path issue was already fixed in https://cgit.kde.org/kinfocenter.git/commit/?id=6243a402c926ad92f641a1c03f68037f48024f18

I don't see the issue you describe. I can view /var/log/samba/log.smbd without needing to be the root user.

However you're right that the monitor doesn't actually display any information. Let's use this bug report to track that--whatever the root cause turns out to be.
Comment 2 davehill 2019-09-04 19:07:59 UTC
Great Nate - thanks. Sorry I missed the log file name change. 

I wonder if the permissions on /var/log/samba/ are a distribution thing?  I'm on Debian 10. I changed the permissions so I can cat the file in a terminal, but still nothing shows up in Kinfocenter - the Update button doesn't seem to update.
Comment 3 Harald Sitter 2020-02-08 17:26:19 UTC
Git commit f1768f7b3ab972e5717d0291a0407422f253adfd by Harald Sitter.
Committed on 08/02/2020 at 17:14.
Pushed by sitter into branch 'Plasma/5.18'.

replace samba module with data that works

Summary:
... and doesn't require lots of maintenance!
this targets 5.18 but is kind of unfortunate because it needs a bunch of
new strings as no existing strings provide what is needed here.

the previous module was super broken in various ways.
in the interest of maintainability I've thrown everything out and replaced
it with 2 core features which require only modeling code on the KInfoCenter
end and provide actually (possibly) useful functionality to the design
personas of plasma.

there is now a single page which contains two table views:

a) Exports: this is a simple table of shares "exported" from the host. the
   data for this comes from KSambaShare in KIOCore. this is the same API
   used by dolphin to create new shares, so the data will be consistent
   and the API needs maintaining anyway
b) Imports: simple table of shares "imported" (i.e. mounted) onto the host.
   the data for this comes from solid

both are backed by models, with an eye towards a future port to qml (out of
scope since I want this fixed for 5.18)

all previous functionality was removed, in part because it was doing CLI
parsing, some of the parsing was broken, some of the CLI tools couldn't
even run as !root, log parsing could use incorrect paths on existing users,
log parsing has nothing to parse with samba defaults, log parsing didn't
implement per-host log file support (current default in samba), log parsing
didn't correctly implement per-user-config-log-file support.
in short: there was not a single feature that worked properly.
Related: bug 374141, bug 325951
FIXED-IN: 5.18.1

{F8053130}

Test Plan:
# exports

- nothing when nothing is exported
- changing exports via dolphin is immediately reflected in the kcm
- export data is valid

# imports

- nothing when nothing is mounted
- (un)mounting a cifs updates the view immediately
- data is valid

Reviewers: #localization, #plasma, #vdg, davidedmundson

Reviewed By: #plasma, #vdg, davidedmundson

Subscribers: jriddell, davidedmundson, ltoscano, yurchor, ngraham, alexde, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27061

M  +17   -17   Modules/samba/CMakeLists.txt
A  +18   -0    Modules/samba/autotests/CMakeLists.txt
A  +23   -0    Modules/samba/autotests/ksambasharemodeltest.cpp     [License: UNKNOWN]  *
A  +23   -0    Modules/samba/autotests/smbmountmodeltest.cpp     [License: UNKNOWN]  *
D  +0    -87   Modules/samba/kcmsambaimports.cpp
D  +0    -50   Modules/samba/kcmsambaimports.h
D  +0    -232  Modules/samba/kcmsambalog.cpp
D  +0    -82   Modules/samba/kcmsambalog.h
D  +0    -302  Modules/samba/kcmsambastatistics.cpp
D  +0    -113  Modules/samba/kcmsambastatistics.h
A  +92   -0    Modules/samba/ksambasharemodel.cpp     [License: UNKNOWN]  *
A  +43   -0    Modules/samba/ksambasharemodel.h     [License: UNKNOWN]  *
D  +0    -210  Modules/samba/ksmbstatus.cpp
D  +0    -61   Modules/samba/ksmbstatus.h
M  +54   -77   Modules/samba/main.cpp
A  +147  -0    Modules/samba/smbmountmodel.cpp     [License: UNKNOWN]  *
A  +54   -0    Modules/samba/smbmountmodel.h     [License: UNKNOWN]  *

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://commits.kde.org/kinfocenter/f1768f7b3ab972e5717d0291a0407422f253adfd