Modules/samba/autotests/ksambasharemodeltest.cpp
@@ -1,0 +1,23 @@
+/*
+    SPDX-FileCopyrightText: 2020 Harald Sitter <sitter@kde.org>
+    SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
+*/
+
+#include <QTest>
+#include <QAbstractItemModelTester>
+
+#include "../ksambasharemodel.h"
+
+class KSambaShareModelTest : public QObject
+{
+    Q_OBJECT
+private Q_SLOTS:
+    void testModel()
+    {
+        QAbstractItemModelTester tester(new KSambaShareModel, QAbstractItemModelTester::FailureReportingMode::QtTest);
+    }
+};
+
+QTEST_GUILESS_MAIN(KSambaShareModelTest)
+
+#include "ksambasharemodeltest.moc"
